--- a/learn-certs-pr/courses/mb-220t00.yml
+++ b/learn-certs-pr/courses/mb-220t00.yml
@@ -25,106 +25,105 @@ roles:
 - functional-consultant
 products:
 - dynamics
-- dynamics-marketing
 exams:
 - uid: exam.mb-220
 summary: |-
   In diesem Kurs wird die Konfiguration der Marketinganwendung besprochen, die für das Geschäftswachstum erforderlich ist. Dabei wird sich auch mit Lead-Management, Marketingformularen und -seiten, Segmentierung und E-Mail-Marketing-Nachrichten befasst. Alle diese Teile sind durch interaktives Customer-Journey-Design miteinander verbunden, einschließlich der Konfiguration von Veranstaltungen und Umfragen.
 
   #### Zielgruppenprofil
+
   Dieser Kurs richtet sich an IT- oder Marketingfachleute, die lernen möchten, wie Dynamics 365 Marketing für Unternehmen eingesetzt werden kann.
 prerequisitesSection: |-
-  Kenntnisse der Dynamics 365-Plattform und Verständnis der grundlegenden Marketingprinzipien.
+  Kenntnisse der Dynamics 365-Plattform und Verständnis der grundlegenden Marketingprinzipien. Erfahrung mit Power Platform, insbesondere in modellgesteuerten Anwendungen, ist ebenfalls empfehlenswert.
 outlineSection: |-
   ### Modul 1&#58; Konfigurieren Sie Dynamics 365 Marketing
-  In diesem Modul erfahren Sie mehr über erweiterte Einstellungen, Marketinginhalte, Vorlagen und Integrationen in Dynamics 365 für Marketing.
+  In diesem Modul erfahren Sie, wie Sie Ihre Marketing-Instanz einrichten und erweiterte Einstellungen konfigurieren können.
   #### Lektionen
-  - Konfigurieren von Organisations- und Verwaltungseinstellungen
-  - Konfigurieren von Marketingeinstellungen
-  - Konfigurieren von Ereigniseinstellungen
+  * Einrichten und Verwalten von Dynamics 365 Marketing
+  * Konfigurieren von Marketingeinstellungen
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - erweiterte Einstellungen wie Organisation, Geschäftsverwaltung und Inhalte zu konfigurieren.
-  - Verwalten von Marketing-Inhalten und Vorlagen.
+  * Richten Sie Ihre Marketing-Anwendung ein.
+  * erweiterte Einstellungen wie Organisation, Geschäftsverwaltung und Inhalte zu konfigurieren.
   
   ### Modul 2&#58; Segmente und Listen verwalten
   In diesem Modul wird erläutert, wie Sie Segmente und Abonnementcenter erstellen verwalten und verwenden können.
   #### Lektionen
-  - Segmente erstellen und verwalten
-  - Erstellen und verwalten von Abonnement-Centern und Listen
+  * Segmente erstellen und verwalten
+  * Erstellen und verwalten von Abonnement-Centern und Listen
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Segmente zu erstellen und zu verwalten.
-  - Abonnement-Center zu erstellen und zu verwalten.
+  * Segmente zu erstellen und zu verwalten.
+  * Abonnement-Center zu erstellen und zu verwalten.
   
   ### Modul 3&#58; Marketingformulare und -seiten verwalten
   In diesem Modul erfahren Sie, wie Sie Marketingformulare und -seiten erstellen.
   #### Lektionen
-  - Formulare verwalten
-  - Marketing-Seiten verwalten
+  * Formulare verwalten
+  * Marketing-Seiten verwalten
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58; 
-  - Marketingformulare zu erstellen und sie in die Marketing-Seiten einzubinden.
-  - Erstellen einer Marketingseite.
-  - Vorschau, Validierung und Live-Schaltung einer Marketingseite.
-  - Erstellen von Marketingformularen und Seitenvorlagen.
+  * Marketingformulare zu erstellen und sie in die Marketing-Seiten einzubinden.
+  * Erstellen einer Marketingseite.
+  * Vorschau, Validierung und Live-Schaltung einer Marketingseite.
+  * Erstellen von Marketingformularen und Seitenvorlagen.
   
   ### Modul 4&#58; Verwalten Sie Leads, Accounts und Kontakte
   In diesem Modul erfahren Sie, wie Sie Kunden als Accounts oder Kontakte verwalten und sie über den Lebenszyklus des Leads hinaus pflegen.
   #### Lektionen
-  - Leads erstellen und verwalten
-  - Konten und Kontakte verwalten
+  * Leads erstellen und verwalten
+  * Konten und Kontakte verwalten
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Kunden als Accounts oder Kontakte zu verfolgen.
-  - einen Lead zu erstellen und ihn in eine Chance umzuwandeln.
-  - Leads während ihres Lebenszyklus zu verwalten. 
+  * Kunden als Accounts oder Kontakte zu verfolgen.
+  * einen Lead zu erstellen und ihn in eine Chance umzuwandeln.
+  * Leads während ihres Lebenszyklus zu verwalten. 
   
   ### Modul 5&#58; Verwalten von Marketing-E-Mails und Kundenreisen
   In diesem Modul wird beschrieben, wie Sie E-Mail-Nachrichten und Kundenreisen in Dynamics 365 Marketing erstellen.
   #### Lektionen
-  - Erstellen von Marketing-E-Mails
-  - Kundenreisen erstellen
+  * Erstellen von Marketing-E-Mails
+  * Kundenreisen erstellen
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - E-Mail-Nachrichten zu erstellen und gestalten.
-  - Vorschau, Validierung und Inbetriebnahme von E-Mail-Nachrichten vorzunehmen.
-  - eine E-Mail-Nachricht als Vorlage zu speichern.
-  - eine Kundenreise zu erstellen.
+  * E-Mail-Nachrichten zu erstellen und gestalten.
+  * Vorschau, Validierung und Inbetriebnahme von E-Mail-Nachrichten vorzunehmen.
+  * eine E-Mail-Nachricht als Vorlage zu speichern.
+  * eine Kundenreise zu erstellen.
   
   ### Modul 6&#58; Ereignisse verwalten
   Dieses Modul überprüft den Erstellungsprozess der Kundenreise.
   #### Lektionen
-  - Erstellen einer Veranstaltung vor Ort
-  - Erstellen einer Webinar-Veranstaltung
-  - Förderung und Verwaltung von Veranstaltungen
+  * Erstellen Sie einen Event
+  * Erstellen einer Webinar-Veranstaltung
+  * Förderung und Verwaltung von Veranstaltungen
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - eine Webinar-Veranstaltung zu erstellen.
-  - eine Veranstaltung vor Ort zu erstellen.
-  - eine Veranstaltung zu bewerben.
-  - die Event-Website zu verwalten.
-  - die Ereigniseinstellungen zu konfigurieren.
+  * Erstellen Sie einen Event.
+  * Erstellen Sie eine Webinar-Veranstaltung mit Teams als Webinar-Anbieter.
+  * eine Veranstaltung zu bewerben.
+  * die Event-Website zu verwalten.
+  * die Ereigniseinstellungen zu konfigurieren.
   
   ### Modul 7&#58; Erstellen Sie Umfragen mit Dynamics 365 Customer Voice
   In diesem Modul wird gezeigt, wie Umfragen erstellt und an Kunden weitergeleitet werden.
   #### Lektionen
-  - Erstellen eines Umfrageprojekts
-  - Erstellen von Umfragen mit Dynamics 365 Customer Voice
-  - Aussenden von Dynamics 365 Customer Voice-Umfragen
+  * Erstellen eines Umfrageprojekts
+  * Erstellen von Umfragen mit Dynamics 365 Customer Voice
+  * Aussenden von Dynamics 365 Customer Voice-Umfragen
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  -Umfragen mit Hilfe von Projekten zu verwalten.
-  - eine Umfrage zu erstellen.
-  - eine Umfrage zu personalisieren.
-  - eine Umfrage an Kunden weiterzuleiten.
+  *Umfragen mit Hilfe von Projekten zu verwalten.
+  * eine Umfrage zu erstellen.
+  * eine Umfrage zu personalisieren.
+  * eine Umfrage an Kunden weiterzuleiten.
   
   ### Modul 8&#58; Analysieren Sie Erkenntnisse in Dynamics 365 Marketing
   In diesem Modul erfahren Sie, wie Sie mit Hilfe von Erkenntnissen Daten zu Ihren Marketinginitiativen anzeigen und analysieren.
   #### Lektionen
-  - Bewerten von Marketinginitiativen mit Analytics
+  * Bewerten von Marketinginitiativen mit Analytics
   
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Erkenntnisse zu verwenden, um Entscheidungen über Marketingbemühungen zu treffen.
-  - Leads zu erzielen.
-  - Erkenntnisse zu Kundenreisen und E-Mail-Nachrichten zu überprüfen
+  * Erkenntnisse zu verwenden, um Entscheidungen über Marketingbemühungen zu treffen.
+  * Leads zu erzielen.
+  * Erkenntnisse zu Kundenreisen und E-Mail-Nachrichten zu überprüfen
