--- a/learn-certs-pr/courses/mb-910t00.yml
+++ b/learn-certs-pr/courses/mb-910t00.yml
@@ -22,6 +22,8 @@ roles:
 - business-owner
 products:
 - dynamics-365
+exams:
+- uid: exam.mb-910
 summary: |-
   Dieser Kurs bietet Ihnen eine umfassende Einführung in die Kundenbindungsfunktionen von Dynamics 365. Sie werden mit dem Konzept der Kundenbindung sowie mit allen Kundenbindungs-Apps vertraut gemacht, einschließlich Dynamics 365 Marketing, Dynamics 365 Sales, Dynamics 365-Kundendienst, Dynamics 365-Außendienst und CRM-Funktionen (Customer Relationship Management) von Dynamics 365 Project Operations.Dieser Kurs beinhaltet sowohl Vorlesungen als auch praktische Übungen.
   
@@ -44,19 +46,19 @@ outlineSection: |-
 
   *  Zusätzliche Marketing-Apps überprüfen
 
-  #### Lab &#58; Arbeiten mit Kundenbindungs-Apps
+  #### Labor &#58; Arbeiten mit Kundenbindungs-Apps
 
   ####
 
-  #### Lab &#58; Kunden und Aktivitäten verwalten
+  #### Labor &#58; Kunden und Aktivitäten verwalten
 
   ####
 
-  #### Lab &#58; Daten suchen und filter
+  #### Labor &#58; Daten suchen und filter
 
   ####
 
-  #### Lab &#58; Dynamics 365 Marketing Capstone Lab
+  #### Labor &#58; Dynamics 365 Marketing Capstone Lab
 
   ####
 
@@ -88,7 +90,7 @@ outlineSection: |-
 
   * Zusätzliche Verkaufs-Apps überprüfen
 
-  #### Lab &#58; Dynamics 365 Sales Capstone Lab
+  #### Labor &#58; Dynamics 365 Sales Capstone Lab
 
   ####
 
@@ -118,7 +120,7 @@ outlineSection: |-
 
   * Zusätzliche Kunden-Service-Apps überprüfen
 
-  #### Lab &#58; Dynamics 365 Capstone Lab
+  #### Labor &#58; Dynamics 365 Capstone Lab
 
   ####
 
@@ -151,7 +153,7 @@ outlineSection: |-
 
   * Asset Management-Funktionen von Dynamics 365 Field Service überprüfen;
   
-  #### Lab &#58; Dynamics 365 Capstone Lab
+  #### Labor &#58; Dynamics 365 Capstone Lab
 
   ####
 
@@ -187,7 +189,7 @@ outlineSection: |-
 
   * Ressourcennutzungsfunktionen von Dynamics 365 Project Operations überprüfen 
   
-  #### Lab &#58; Dynamics 365-Projektbetrieb Capstone Lab
+  #### Labor &#58; Dynamics 365-Projektbetrieb Capstone Lab
 
   ####
 
