--- a/learn-certs-pr/courses/pl-600t00.yml
+++ b/learn-certs-pr/courses/pl-600t00.yml
@@ -16,6 +16,8 @@ roles:
 - solution-architect
 products:
 - power-platform
+exams:
+- uid: exam.pl-600
 summary: |-
   Der Lösungs-Architekt ist verantwortlich für das erfolgreiche Design, die Implementierung, die Bereitstellung und die Übernahme einer Gesamtlösung.Der Lösungs-Architekt stellt sicher, dass die Lösung jetzt und in Zukunft den Kundenanforderungen entspricht. In diesem Kurs lernen die Teilnehmer die Entscheidungen kennen, die ein Lösungs-Architekt während einer Implementierung trifft. Dazu gehören Sicherheit, Integrationen, Power Apps-Architektur, Power Automate-Architektur und vieles mehr.Dieser Kurs soll Ihnen eine Einführung in die Rolle des Lösungs-Architekten geben.
   
@@ -97,9 +99,9 @@ outlineSection: |-
 
   * Betriebsberichterstattung
 
-  *   Power BI
+  * Power BI
 
-  *   Enterprise BI
+  * Enterprise BI
 
   * Vorgefertigte Einblicke und benutzerdefinierte KI
 
@@ -121,7 +123,7 @@ outlineSection: |-
 
   #### Lektionen
 
-  *   Die Rolle von Microsoft Vision und Solution Architect in ALM
+  * Die Rolle von Microsoft Vision und Solution Architect in ALM
 
   * Umweltstrategien
 
@@ -135,7 +137,7 @@ outlineSection: |-
 
   #### Lektionen
 
-  *   Erläutern von Optionen für Automatisierung und benutzerdefinierte Logik
+  * Erläutern von Optionen für Automatisierung und benutzerdefinierte Logik
 
   * Überprüfen der Überlegungen zur Verwendung von Triggern und allgemeinen Aktionen
 
