--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -15,7 +15,9 @@ summary: |-
   Ein Kandidat für diese Zertifizierung sollte über 1-2 Jahre berufliche Erfahrung in der Entwicklung sowie Erfahrung mit Microsoft Azure verfügen. Darüber hinaus sollte der Kandidat für diese Rolle in der Lage sein, in einer von Azure unterstützten Sprache zu programmieren  und über Kenntnisse in Azure SDKs, Azure PowerShell, Azure CLI, Datenspeicheroptionen, Datenverbindungen, APIs, App-Authentifizierung und -Autorisierung, Berechnung und Containerbereitstellung, Debugging, Leistungsoptimierung und Überwachung verfügen.
 
   Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwickeln von Azure Computing Solutions; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimierung von Lösungen; und Verbindung zu und Nutzung von Azure Services und Drittanbieter-Services.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwickeln von Azure Computing Solutions; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimierung von Lösungen; und Verbindung zu und Nutzung von Azure Services und Drittanbieter-Services.
+
+Testteilnehmer können die Codesprache (C# oder Python) auswählen, die in den Fragen enthalten ist, wenn sie die Prüfung starten, sofern die Prüfung über Person VUE abgelegt wird. Diese Option steht jedoch nicht für Prüfungen durch PSI zur Verfügung. Diese Fragen enthalten C#-Code.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oZ7B
 locales:
