--- a/learn-certs-pr/azure-data-scientist/index.yml
+++ b/learn-certs-pr/azure-data-scientist/index.yml
@@ -7,15 +7,19 @@ uid: certification.azure-data-scientist
 certificationRenewalUid: renewal.azure-data-scientist
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Azure Data Scientists wenden ihre Kenntnisse in Datenwissenschaften und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mit Hilfe des Azure Machine Learning Service.
+  Kandidaten für die Azure Data Scientist Associate-Zertifizierung sollten über Fachkenntnisse in der Anwendung von Datenwissenschaft und maschinellem Lernen verfügen, um Arbeiten mit maschinellem Lernen in Azure zu implementieren und auszuführen.
+  
+  Zu den Aufgaben dieser Rolle gehört die Planung und Erstellung einer geeigneten Arbeitsumgebung für datenwissenschaftliche Arbeiten in Azure. Sie führen Datenexperimente durch und trainieren Vorhersagemodelle. Darüber hinaus verwalten, optimieren und implementieren Sie Machine-Learning-Modelle in der Produktion.
+  
+  Ein Kandidat für diese Zertifizierung sollte über Kenntnisse und Erfahrungen in Data Science und der Verwendung von Azure Machine Learning und Azure Databricks verfügen.
 subTitle: Azure Data Scientists wenden ihre Kenntnisse in Datenwissenschaften und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mit Hilfe des Azure Machine Learning Service.
 levels:
 - intermediate
 skills:
-- Einrichten eines Azure-Arbeitsbereichs für maschinelles Lernen
+- Verwaltung von Azure-Ressourcen für maschinelles Lernen
 - Experimente durchführen und Modelle trainieren
-- Modelle optimieren und verwalten
-- Modelle bereitstellen und verwenden
+- Bereitstellung und Operationalisierung von Lösungen für maschinelles Lernen
+- verantwortliches maschinelles Lernen implementieren
 roles:
 - data-scientist
 type: role-based
@@ -26,10 +30,12 @@ products:
 - azure-machine-learning-studio
 courses:
 - uid: course.dp-100t01
+- uid: course.dp-090t00
 paths:
 - uid: learn.wwl.create-machine-learn-models
 - uid: learn.wwl.create-no-code-predictive-models-with-azure-machine-learning
 - uid: learn.data-ai.build-ai-solutions-with-azure-ml-service
+- uid: learn.wwl.perform-data-science-azure-databricks
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHg
 exams:
 - uid: exam.dp-100
